--- a/CS-UrlRedirect-Pages/CS-UrlRedirect-Pages.csproj
+++ b/CS-UrlRedirect-Pages/CS-UrlRedirect-Pages.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>CS_UrlRedirect_Pages</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
